--- a/PersonalSmartCupAndroid/app/src/main/AndroidManifest.xml
+++ b/PersonalSmartCupAndroid/app/src/main/AndroidManifest.xml
@@ -18,19 +18,28 @@
         <activity
                 android:name=".LoginActivity"
                 android:label="@string/app_name_chs">
-        </activity>
-        <activity android:name=".AboutActivity">
-        </activity>
-        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".AboutActivity">
+        </activity>
+        <activity android:name=".MainActivity">
+        </activity>
         <activity
                 android:name=".HistoryActivity"
                 android:label="@string/title_activity_history"
+                android:parentActivityName=".MainActivity"
+                android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="com.github.wangxuxin.personalsmartcup.MainActivity"/>
+        </activity>
+        <activity
+                android:name=".AlarmActivity"
+                android:label="@string/title_activity_alarm"
                 android:parentActivityName=".MainActivity"
                 android:theme="@style/AppTheme.NoActionBar">
             <meta-data
